# decmpfs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  depot.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: config.darwin-signing.toml  config.repo.toml  sign-and-run.sh
.claude/plans/: exe-pack.md
.claude/reports/: quality-scan-2026-07-08.html
.config/: readme-fleet-shape.json
.config/repo/: lockstep.json  socket-wheelhouse.json
.git-hooks/: pre-commit  pre-push
.github/: zizmor.yml
.github/workflows/: cargo-publish.yml  ci.yml  github-release.yml  provenance.yml  publish-crate.yml  publish-npm.yml
assets/brand/: README.md  combomark.mts
assets/repo/: preview.html
crates/decmpfs/: Cargo.toml  build.rs
fuzz/: .gitignore  Cargo.toml  fuzz.dict  no-unsafe-without-fuzz.sh  run.sh
fuzz/fuzz_targets/: decode_pressed_data.rs  unwrap_if_hybrid.rs
napi/decmpfs/: Cargo.toml  README.md  index.cjs  index.d.cts  package.json  tsconfig.json
node/: .gitignore  Cargo.toml  index.cjs  package.json
node/scripts/: build.mts  make-placeholders.mts
node/test/: write.test.mjs
scripts/: changelog-section.mjs  changelog-section.mts  check-versions.mjs  check-versions.mts  check.mjs  check.mts  install-git-hooks.mts  lint.mts  publish-crate.mjs  publish-crate.mts  release.mjs  release.mts
scripts/repo/: changelog-section.mts  check-versions.mts  check.mts  coverage.mts  install-git-hooks.mts  lint.mts  publish-crate.mts  release.mts  test.mts
src/: gate.rs  lib.rs  macos.rs  safety.rs
(+46 files in other folders)
