[workspace]
members = ["crates/*", "napi/*"]
# `fuzz/` is a STANDALONE cargo-fuzz workspace with its own inverted profile; keep
# it out of the root workspace so a plain `cargo build` never sweeps the fuzzer in.
exclude = ["fuzz"]
resolver = "2"

# Release tuning for the shipped artifacts (the decmpfs.node cdylib + the
# decmpfs-stub exe both inherit this). Fat LTO + a single codegen unit let the
# codec/integrity glue inline into the addon; strip drops symbols a dlopen'd
# .node never needs. Panic stays the default `unwind` — napi-rs wraps every
# binding in `catch_unwind` to turn a Rust panic into a thrown JS error, so
# `abort` would turn a recoverable panic into a hard process crash.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
